#2522 Code quality improvement and modernisation